Criando componente para listagem de contatos

--- a/frontend/agenda-app/src/app/components/pages/login/login.component.html
+++ b/frontend/agenda-app/src/app/components/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <form class="form-signin" (submit)="submit()">
   <img class="mb-4" src="https://getbootstrap.com.br/docs/4.1/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-  <h1 class="h3 mb-3 font-weight-normal">Code Shopping</h1>
+  <h1 class="h3 mb-3 font-weight-normal">Agenda</h1>
   <label for="email" class="sr-only">E-mail</label>
   <input type="email" id="email" name="email" class="form-control" placeholder="Digite o e-mail" required autofocus
          [(ngModel)]="credentials.email">
