--- a/frontend/agenda-app/src/app/components/pages/contact/contact-list/contact-list.component.html
+++ b/frontend/agenda-app/src/app/components/pages/contact/contact-list/contact-list.component.html
@@ -1,3 +1,54 @@
-<p>
-  contact-list works!
-</p>
+<div class="rows">
+  <h1>Listagem de Contatos</h1>
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <td colspan="5"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Novo Contato</button></td>
+    </tr>
+    <tr>
+      <th style="width: 5%">ID</th>
+      <th style="width: 65%">Nome</th>
+      <th style="width: 10%">E-mail</th>
+      <th style="width: 10%">Telefone</th>
+      <th style="width: 10%">Compania</th>
+      <th style="width: 10%">Criado em</th>
+      <th style="width: 10%">Ações</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let contact of contacts">
+      <td>{{contact.id}}</td>
+      <td>{{contact.name}}</td>
+      <td>{{contact.email}}</td>
+      <td>{{contact.phone_number}}</td>
+      <td>{{contact.company}}</td>
+      <td>{{contact.created_at.date | date: 'dd/MM/yyyy'}}</td>
+      <td>Editar | Excluir</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+<!--<form (submit)="submit()">-->
+<!--  <div class="modal" tabindex="-1" role="dialog" id="exampleModal">-->
+<!--    <div class="modal-dialog" role="document">-->
+<!--      <div class="modal-content">-->
+<!--        <div class="modal-header">-->
+<!--          <h5 class="modal-title">Novo contato</h5>-->
+<!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--            <span aria-hidden="true">&times;</span>-->
+<!--          </button>-->
+<!--        </div>-->
+<!--        <div class="modal-body">-->
+<!--          <div class="form-group">-->
+<!--            <label for="name">Nome</label>-->
+<!--            <input type="text" class="form-control" name="name" id="name" required [(ngModel)]="contacts.name">-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="modal-footer">-->
+<!--          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>-->
+<!--          <button type="submit" class="btn btn-primary">Incluir</button>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</form>-->
