--- a/frontend/agenda-app/src/app/components/pages/contact/contact-list/contact-list.component.html
+++ b/frontend/agenda-app/src/app/components/pages/contact/contact-list/contact-list.component.html
@@ -28,27 +28,39 @@
     </tbody>
   </table>
 </div>
-<!--<form (submit)="submit()">-->
-<!--  <div class="modal" tabindex="-1" role="dialog" id="exampleModal">-->
-<!--    <div class="modal-dialog" role="document">-->
-<!--      <div class="modal-content">-->
-<!--        <div class="modal-header">-->
-<!--          <h5 class="modal-title">Novo contato</h5>-->
-<!--          <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--            <span aria-hidden="true">&times;</span>-->
-<!--          </button>-->
-<!--        </div>-->
-<!--        <div class="modal-body">-->
-<!--          <div class="form-group">-->
-<!--            <label for="name">Nome</label>-->
-<!--            <input type="text" class="form-control" name="name" id="name" required [(ngModel)]="contacts.name">-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="modal-footer">-->
-<!--          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>-->
-<!--          <button type="submit" class="btn btn-primary">Incluir</button>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</form>-->
+<form (submit)="submit()">
+  <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Novo contato</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="name">Nome</label>
+            <input type="text" class="form-control" name="name" id="name" required [(ngModel)]="contact.name">
+          </div>
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" name="email" id="email" class="form-control" required [(ngModel)]="contact.email">
+          </div>
+          <div class="form-group">
+            <label for="name">Telefone</label>
+            <input type="text" class="form-control" name="phone_number" id="phone_number" required [(ngModel)]="contact.phone_number">
+          </div>
+          <div class="form-group">
+            <label for="name">Compania</label>
+            <input type="text" class="form-control" name="company" id="company" required [(ngModel)]="contact.company">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          <button type="submit" class="btn btn-primary">Incluir</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
