--- a/frontend/agenda-app/src/app/components/pages/contact/contact-list/contact-list.component.html
+++ b/frontend/agenda-app/src/app/components/pages/contact/contact-list/contact-list.component.html
@@ -1,5 +1,5 @@
 <div class="rows">
-  <h1>Listagem de Contatos</h1>
+  <h1>Lista de Contatos</h1>
   <table class="table table-striped">
     <thead>
     <tr>
@@ -7,12 +7,12 @@
     </tr>
     <tr>
       <th style="width: 5%">ID</th>
-      <th style="width: 65%">Nome</th>
-      <th style="width: 10%">E-mail</th>
+      <th style="width: 25%">Nome</th>
+      <th style="width: 25%">E-mail</th>
       <th style="width: 10%">Telefone</th>
-      <th style="width: 10%">Compania</th>
+      <th style="width: 12%">Compania</th>
       <th style="width: 10%">Criado em</th>
-      <th style="width: 10%">Ações</th>
+      <th style="width: 13%">Ações</th>
     </tr>
     </thead>
     <tbody>
