--- a/frontend/agenda-app/src/app/components/pages/contact/contact-new-modal/contact-new-modal.component.html
+++ b/frontend/agenda-app/src/app/components/pages/contact/contact-new-modal/contact-new-modal.component.html
@@ -15,7 +15,7 @@
           <input type="text" class="form-control" name="phone_number" id="phone_number" required [(ngModel)]="contact.phone_number">
         </div>
         <div class="form-group">
-          <label for="name">Compania</label>
+          <label for="name">Companhia</label>
           <input type="text" class="form-control" name="company" id="company" required [(ngModel)]="contact.company">
         </div>
      </div>
