Criado componente de Menu de navegação.

--- a/frontend/agenda-app/src/app/app.component.html
+++ b/frontend/agenda-app/src/app/app.component.html
@@ -1,6 +1,6 @@
+<navbar></navbar>
 <main>
   <div class="container">
-<!--    {{authService.me?.name}}-->
     <router-outlet></router-outlet>
   </div>
 </main>
