--- a/frontend/agenda-app/src/app/app.component.html
+++ b/frontend/agenda-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<navbar></navbar>
+<navbar *ngIf="canShowNavBar()"></navbar>
 <main>
   <div class="container">
     <router-outlet></router-outlet>
