--- a/frontend/agenda-app/src/app/components/bootstrap/navbar/navbar.component.html
+++ b/frontend/agenda-app/src/app/components/bootstrap/navbar/navbar.component.html
@@ -16,7 +16,7 @@
           {{authService.me?.name}}
         </a>
         <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Logout</a>
+          <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Logout</a>
         </div>
       </li>
     </ul>
