--- a/frontend/agenda-app/src/app/components/pages/login/login.component.html
+++ b/frontend/agenda-app/src/app/components/pages/login/login.component.html
@@ -11,5 +11,5 @@
   <input type="password" id="password" name="password" class="form-control" placeholder="Digite sua senha" required
          [(ngModel)]="credentials.password">
   <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-  {{ credentials | json }}
+<!--  {{ credentials | json }}-->
 </form>
