--- a/frontend/agenda-app/src/app/components/pages/login/login.component.html
+++ b/frontend/agenda-app/src/app/components/pages/login/login.component.html
@@ -12,4 +12,8 @@
          [(ngModel)]="credentials.password">
   <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
 <!--  {{ credentials | json }}-->
+  <div>
+    <a class="text-center" href="javascript:void(0)" (click)="showModalNewUser()">Quero me cadastrar</a>
+  </div>
 </form>
+<user-new-modal (onSuccess)="onInsertSuccess($event)" (onError)="onInsertError($event)"></user-new-modal>
